# AI-SRE-Kubernetes

./: .dockerignore  .gitignore  AGENTS.md  MEMORY.md  README.md  docker-compose.yml
.insforge/: project.json
backend/: .env.example  Dockerfile  main.py  pyproject.toml  requirements.txt
backend/ai/: __init__.py  agent.py  agent.py.backup
backend/api/: __init__.py  contexts.py  health.py  investigate.py  routes.py
backend/core/: __init__.py  config.py
backend/k8s_executor/: __init__.py  executor.py  inspector.py
backend/kubernetes/: executor.py  inspector.py
backend/models/: schemas.py
backend/services/: __init__.py  insforge_db.py  investigation.py  investigation.py.backup
docs/: .gitkeep
frontend/: .env.local  Dockerfile  package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  metadata.ts  page.tsx
frontend/components/: DashboardHeader.tsx  DashboardPage.tsx  DiagnosisCard.tsx  InvestigationHistory.tsx  ProgressSteps.tsx
frontend/context/: AuthProvider.tsx
frontend/docs/: investigation_history.sql
frontend/hooks/: useInvestigation.ts
frontend/lib/: insforge.ts
frontend/public/: .gitkeep
frontend/services/: api.ts
memory/: add-user-banner.md  beautify-user-banner.md  fix-insforge-api-path.md  fix-investigation-progress-persistence.md  fix-investigation-progress-visibility.md  session-summary-2026-06-27.md  update-dashboard-layout.md
migrations/: 20260626073700_create-investigation-progress.sql  20260628082002_add-context-to-investigation-progress-step.sql
prompts/: .gitkeep
(+4 files in other folders)
