[project]
name = "ai-kubernetes-agent"
version = "0.1.0"
description = "AI-powered Kubernetes troubleshooting agent backend"
requires-python = ">=3.12"

dependencies = [
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
    "pydantic==2.10.3",
    "pydantic-settings==2.6.1",
    "loguru==0.7.3",
    "httpx==0.28.1",
    "python-dotenv==1.0.1",
    "tenacity==8.2.3",
    "openai>=1.0.0",
    "kubernetes>=28.0.0",
]

# No build backend needed – this is an application, not a library.
# uv manages the venv directly without packaging the app itself.
[tool.uv]
package = false
